[#6] Add the Business layer - added the Busines Layer - added the first version of the BasketService - implemented ExceptionHandling Middleware

--- a/CheckoutApp/CheckoutApp/CheckoutApp.csproj
+++ b/CheckoutApp/CheckoutApp/CheckoutApp.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CheckoutApp.Business\CheckoutApp.Business.csproj" />
     <ProjectReference Include="..\DataAccess\CheckoutApp.DataAccess.csproj" />
   </ItemGroup>
 
