--- a/CheckoutApp/CheckoutApp.Business/CheckoutApp.Business.csproj
+++ b/CheckoutApp/CheckoutApp.Business/CheckoutApp.Business.csproj
@@ -9,6 +9,8 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.1.2" />
+    <PackageReference Include="IdempotentAPI" Version="1.0.1" />
+    <PackageReference Include="IdempotentAPI.Cache.DistributedCache" Version="1.0.1" />
     <PackageReference Include="Microsoft.AspNetCore" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
   </ItemGroup>
