[#15] Add InMemory option for DbContext

--- a/CheckoutApp/CheckoutApp/appsettings.json
+++ b/CheckoutApp/CheckoutApp/appsettings.json
@@ -7,6 +7,9 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Data Source = (localdb)\\MSSQLLocalDB;Initial Catalog=CheckoutApp;Integrated Security=True;" 
+    "Default": "Data Source = (localdb)\\MSSQLLocalDB;Initial Catalog=CheckoutApp;Integrated Security=True;"
+  },
+  "CheckoutDBContextOptions": {
+    "UseInMemoryDb": true 
   } 
 }
